main readme update